syntax = "proto3";

option csharp_namespace = "ProductGrpc.Protos";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service ProductProtoService 
{
	rpc GetProduct (GetProductRequest) returns (GetProductResponse);
	rpc GetAllProducts (GetAllProductsRequest) returns (ProductModelListResponse);

	rpc AddProduct (AddProductRequest) returns (AddProductResponse);
	rpc UpdateProduct (UpdateProductRequest) returns (UpdateProductResponse);
	rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);

	rpc InsertBulkProduct (stream ProductModel) returns (InsertBulkProductResponse);
	rpc Test (google.protobuf.Empty) returns (google.protobuf.Empty);
}

message GetProductRequest {
	int32 productId = 1;
}

message GetAllProductsRequest {
}

message AddProductRequest {
	ProductModel product = 1;
}

message UpdateProductRequest {
	ProductModel product = 1;
}

message DeleteProductRequest {
	int32 productId = 1;
}

message InsertBulkProductResponse {
	bool success = 1;
	int32 insertCount = 2;
}
message GetProductResponse {
	bool success = 1;
	ProductModel ProductModel = 2;
}

message ProductModelListResponse {
	bool success = 1;
	repeated ProductModel productModelList = 2;
}

message AddProductResponse {
	bool success = 1;
	ProductModel ProductModel = 2;
}

message UpdateProductResponse {
	bool success = 1;
	ProductModel ProductModel = 2;
}

message DeleteProductResponse {
	bool success = 1;
}

message ProductModel {
	int32 productId = 1;
	string name = 2;
	string description = 3;
	float price = 4;
	ProductStatus status = 5;
	google.protobuf.Timestamp createdTime = 6;
}

enum ProductStatus {
	INSTOCK = 0;
    LOW = 1;
    NONE = 2;
}



